replacement of assets
- convert objects of c1 to single frame asset
- replace icon to correct ones

--- a/Layouts/Stage 1 Story.xml
+++ b/Layouts/Stage 1 Story.xml
@@ -29,7 +29,7 @@
             <blend-mode>0</blend-mode>
             <effect-fallback>0</effect-fallback>
             <instances>
-                <instance type="DaikokuPA" uid="344">
+                <instance type="DaikokuPABG" uid="344">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
