--- a/Layouts/Stage 2 Story.xml
+++ b/Layouts/Stage 2 Story.xml
@@ -29,7 +29,7 @@
             <blend-mode>0</blend-mode>
             <effect-fallback>0</effect-fallback>
             <instances>
-                <instance type="DaikokuPA" uid="367">
+                <instance type="DaikokuPABG" uid="367">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
