--- a/Layouts/Stage 3 Story.xml
+++ b/Layouts/Stage 3 Story.xml
@@ -42,11 +42,11 @@
                         <x>640</x>
                         <y>360</y>
                         <z>0</z>
-                        <width>1318.04296875</width>
-                        <height>741.098693848</height>
+                        <width>1280</width>
+                        <height>720</height>
                         <depth>0</depth>
-                        <hotspotX>0.500260532</hotspotX>
-                        <hotspotY>0.500463367</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
